--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
                 <img src="assets/images/menu.jpg" alt="Grilled chiken">
             </div>
 
-            <div class="container">
-                <h2>Доставка с душой!</h2>
+            <div class="container header-prime-text">
+                <h2>Доставка вкуснейших<br>блюд за 20 минут!</h2>
             </div>
         </div>
 
