--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,15 @@
 
 
         <div class="header-prime">
-            <div class="fade">
-                <img src="assets/images/menu.jpg" alt="Grilled chiken">
-            </div>
-
-            <div class="container header-prime-text">
+            <div class="header-prime-text container">
                 <h2>Доставка вкуснейших<br>блюд за 20 минут!</h2>
+
+                <div class="header-prime-text-back">
+                    <div>
+                        <p>Еще не пробовал?</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
