main navigation block complete

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div class="header-top-block">
 
+        <div class="header-top-block">
             <div class="container">
                 <ul class="header-top-menu">
                     <li><a class="header-top-logo" href="#">Logos</a></li>
@@ -49,9 +49,28 @@
                         <p>Еще не пробовал?</p>
                     </div>
                 </div>
-                
             </div>
         </div>
+
+
+        <div class="header-navigation">
+            <nav class="container">
+                <ul class="navigation-main">
+                    <li><a class="navigation-main-active" href="#">Холодные закуски</a></li>
+                    <li><a href="#">Горячие закуски</a></li>
+                    <li><a href="#">Мясные блюда</a></li>
+                    <li><a href="#">Супы</a></li>
+                    <li><a href="#">Рыбные блюда</a></li>
+                    <li><a href="#">Гриль меню</a></li>
+                    <li><a href="#">Фирменные блюда</a></li>
+                    <li><a href="#">Напитки</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
+        
+
 
     </header>
 
