food block complete

--- a/src/index.html
+++ b/src/index.html
@@ -68,13 +68,228 @@
             </nav>
         </div>
 
-
-        
-
-
     </header>
 
-    <main>
+    <main class="container">
+
+        <div class="food-block">
+            <h2>Холодные закуски</h2>
+            <div class="food-carousel">
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu1.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Ягненок</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu2.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Индейка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu3.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Гусь</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu4.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Утка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный рисом, курагой и айвой</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="food-block">
+            <h2>Горячие закуски</h2>
+            <div class="food-carousel">
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu1.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Ягненок</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu2.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Индейка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu3.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Гусь</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu4.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Утка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный рисом, курагой и айвой</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+            </div>
+        </div>
+
+
+        
+        <div class="food-block">
+            <h2>Мясные блюда</h2>
+            <div class="food-carousel">
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu1.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Ягненок</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu2.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Индейка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный гречневой кашей, курагой, апельсином и зеленым яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu3.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Гусь</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный яблоком</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+
+
+                <div class="food-carousel-card">
+                    <img src="assets/images/menu/menu4.jpg" alt="yagnenok">
+                    <section class="food-carousel-card-info">
+                        <div class="food-carousel-card-header">
+                            <h3>Утка</h3>
+                            <span>Вес: 225 г</span>
+                        </div>
+                        <p>Фаршированный рисом, курагой и айвой</p>
+                        <div class="food-carousel-card-price">
+                            <span>230 $</span>
+                            <a href="#">В корзину<i></i></a>
+                        </div>
+                    </section>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+
     </main>
 
     <footer>
