--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
         </div>
 
 
-        
+
         <div class="food-block">
             <h2>Мясные блюда</h2>
             <div class="food-carousel">
@@ -284,15 +284,32 @@
 
             </div>
         </div>
-
-
-
-
-
-
     </main>
 
     <footer>
+
+        <div class="footer-our-caffe">
+            <div class="container">
+                <div class="our-caffe-block">
+                    <div class="our-caffe-info">
+                        <h3></h3>
+                        <p></p>
+                        <a href="#">a</a>
+                    </div>
+
+                    <ul class="our-caffe-priority">
+                       <li class="onion"><i></i>Свежайшие продукты</li> 
+                       <li class="light"><i></i>Быстрая доставка</li> 
+                       <li class="cheff"><i></i>Лучшие повара</li> 
+                       <li class="fresh"><i></i>Свежайшие продукты</li> 
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+
+
+
     </footer>
 </body>
 
