our cafe block complete

--- a/src/index.html
+++ b/src/index.html
@@ -288,25 +288,32 @@
 
     <footer>
 
-        <div class="footer-our-caffe">
-            <div class="container">
-                <div class="our-caffe-block">
-                    <div class="our-caffe-info">
-                        <h3></h3>
-                        <p></p>
-                        <a href="#">a</a>
-                    </div>
+        <div class="container ">
+            <div class="our-cafe">
 
-                    <ul class="our-caffe-priority">
-                       <li class="onion"><i></i>Свежайшие продукты</li> 
-                       <li class="light"><i></i>Быстрая доставка</li> 
-                       <li class="cheff"><i></i>Лучшие повара</li> 
-                       <li class="fresh"><i></i>Свежайшие продукты</li> 
-                    </ul>
-
+                <div class="our-cafe-info">
+                    <h3>Наше кафе</h3>
+                    <p>Мы расположены в одном из самых живописных мест города — на берегу реки, это ваш оазис в черте
+                        города, куда можно сбежать от шумного и пыльного мегаполиса. Мы, действительно уникальные, ведь
+                        все
+                        продумано до мелочей: проект построен из дикого закарпатского сруба, камин в основном зале
+                        ресторана
+                        и панорамные окна с видом на реку, уютные беседки на берегу реки и лучшая видовая террасса,
+                        шатер с
+                        посадкой на 200 человек, сказочный детский домик и бассейн.</p>
+                    <a href="#">Посмотреть меню</a>
                 </div>
+
+                <ul class="our-cafe-priorities">
+                    <li><i class="icon-onion"></i>Свежайшие продукты</li>
+                    <li><i class="icon-lighting"></i>Быстрая доставка</li>
+                    <li><i class="icon-chief"></i>Лучшие повара</li>
+                    <li><i class="icon-fresh"></i>Свежайшие продукты</li>
+                </ul>
             </div>
         </div>
+
+
 
 
 
