--- a/src/index.html
+++ b/src/index.html
@@ -289,7 +289,7 @@
 
     <footer>
 
-        <div class="container ">
+        <div class="container">
             <div class="our-cafe">
 
                 <div class="our-cafe-info">
@@ -315,10 +315,8 @@
         </div>
 
 
-
-
         <div class="contacts-block">
-            <div class="container">
+            <div class="container contacts-grid">
                 <div class="contacts-card">
                     <h4>Контакты</h4>
 
@@ -346,12 +344,12 @@
                         <li><a class="social-icon social-ig" href="#"><span class="visually-hidden">Social Instagram</span></a></li>
                     </ul>
                 </div>
+
+                <div class="contacts-here">
+
+                </div>
             </div>
         </div>
-
-
-
-
 
 
         <div class="footer-block">
